added enabled disable notification and list all
